--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,26 +8,25 @@
 body {
     margin: 0;
     overflow: hidden;
+    background-color: #f1f1f1;
 }
 .center {
     width: 100%;
     max-width: 1180px;
     margin: auto;
 }
+header {
+    background-color: #FFF;
+}
 .topo-header {
     position: relative;
     width: 100%;
     height: 80px;
     padding: 0 12px;
-    background-color: #f5f5f5;
+    background-color: #FFF;
     display: flex;
     align-items: center;
     justify-content: space-between;
-}
-.logo-header {
-    height: 60px;
-    width: 150px;
-    border: 1px solid #505050;
 }
 .menu-header {
     padding: 0;
@@ -77,7 +76,7 @@ body {
     position: absolute;
     height: 100vh;
     background-color: #e2e2e2;
-    right: -500px;
+    right: -700px;
     top: 100%;
     display: flex;
     width: 320px;
