--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,10 +4,11 @@
 :root {
     --vermelho-p: #B24236;
     --verde-p: #0C260B;
+    --sans-serif: font-family: 'Montserrat', sans-serif;
+    --serif: font-family: 'Merriweather', serif;
   }
 body {
     margin: 0;
-    overflow: hidden;
     background-color: #f1f1f1;
 }
 .center {
@@ -17,6 +18,12 @@ body {
 }
 header {
     background-color: #FFF;
+}
+.hr-low-red {
+    width: 80px;
+    margin: 0;
+    border: 2px solid var(--vermelho-p);
+    background-color: var(--vermelho-p);
 }
 .topo-header {
     position: relative;
@@ -81,6 +88,133 @@ header {
     display: flex;
     width: 320px;
     transition: 0.4s;
+}
+.start-home {
+    margin-top: 30px;
+}
+.home-flex {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+.home-left,
+.home-right {
+    width: 50%;
+    padding: 12px;
+    height: 460px;
+}
+.home-left {
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    flex-direction: column;
+}
+.title-home {
+    width: 420px;
+}
+.title-home h1 {
+    font-size: 32px !important;
+    color: var(--vermelho-p);
+    margin: 0;
+    font-family: 'Merriweather', serif;
+}
+.text-home h4 {
+    font-size: 20px;
+    margin: 0;
+    color: #404040;
+    line-height: 30px;
+    font-family: 'Montserrat', sans-serif;
+}
+.text-home {
+    margin: 25px 0;
+    width: 90%;
+}
+.btn-red {
+    margin-top: 25px;
+    width: 90%;
+    background-color: var(--vermelho-p);
+    color: #FFF;
+    height: 45px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 6px;
+    cursor: pointer;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 500;
+}
+.img-home {
+    width: 90%;
+    height: 400px;
+    background-color: #dadada;
+}
+.sobre-mim {
+    position: relative;
+    background-color: var(--verde-p);
+    padding: 24px 0;
+    height: 540px;
+}
+.sobre-flex {
+    width: 100%;
+    display: flex;
+    color: #FFF;
+}
+.sobre-left {
+    width: 50%;
+}
+.sobre-right {
+    padding: 0 48px;
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+}
+.area-img-sobre-mim {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 50%;
+    height: 540px;
+    overflow: hidden;
+    background-color: #dadada;
+}
+.area-bg-sobre-mim {
+    position: absolute;
+    right: 0;
+    top: 0;
+    width: 50%;
+    height: 540px;
+    overflow: hidden;
+}
+.img-sobre-mim {
+    position: absolute;
+    right: 0;
+    top: 0px;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.sobre-right h2 {
+    font-size: 32px;
+    color: var(--vermelho-p);
+    margin: 10px 0;
+    font-family: 'Montserrat', sans-serif;;
+}
+.sobre-right p {
+    margin-top: 25px;
+    font-size: 18px;
+    font-weight: 300;
+    color: #cfcfcf;
+    line-height: 28px;
+    padding-right: 24px;
+    font-family: 'Montserrat', sans-serif;;
+}
+.sobre-right p,
+.sobre-right h2,
+.sobre-right hr,
+.sobre-right.btn-red {
+    z-index: 3;
 }
 
 @media (max-width: 1180px) {
