--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,9 +48,17 @@ header {
     justify-content: center;
     align-items: center;
     height: 40px;
+    font-size: 16px;
+    color: var(--verde-p);
+    font-family: 'Merriweather', serif;
+    cursor: pointer;
+    border-radius: 4px;
+    transition: 0.1s;
 }
 .menu-header li:hover {
-    background-color: #e2e2e2;
+    border-bottom: 2px solid var(--vermelho-p);
+    height: 38px;
+    color: var(--vermelho-p);
 }
 .topo-header  nav {
     display: flex;
@@ -103,6 +111,10 @@ header {
     padding: 12px;
     height: 460px;
 }
+.home-right {
+    display: flex;
+    justify-content: flex-end;
+}
 .home-left {
     display: flex;
     justify-content: center;
@@ -146,13 +158,15 @@ header {
 .img-home {
     width: 90%;
     height: 400px;
-    background-color: #dadada;
+}
+.img-home img {
+    width: 95%;
 }
 .sobre-mim {
+    margin-top: 40px;
     position: relative;
     background-color: var(--verde-p);
-    padding: 24px 0;
-    height: 540px;
+    padding: 60px 0;
 }
 .sobre-flex {
     width: 100%;
@@ -163,7 +177,7 @@ header {
     width: 50%;
 }
 .sobre-right {
-    padding: 0 48px;
+    padding: 0px 0px 0px 80px;
     width: 50%;
     display: flex;
     flex-direction: column;
@@ -175,7 +189,7 @@ header {
     left: 0;
     top: 0;
     width: 50%;
-    height: 540px;
+    height: 100%;
     overflow: hidden;
     background-color: #dadada;
 }
@@ -199,22 +213,69 @@ header {
     font-size: 32px;
     color: var(--vermelho-p);
     margin: 10px 0;
-    font-family: 'Montserrat', sans-serif;;
+    font-family: 'Merriweather', sans-serif;
 }
 .sobre-right p {
     margin-top: 25px;
     font-size: 18px;
     font-weight: 300;
     color: #cfcfcf;
-    line-height: 28px;
-    padding-right: 24px;
-    font-family: 'Montserrat', sans-serif;;
+    line-height: 32px;
+    padding-right: 12px;
+    font-family: 'Montserrat', sans-serif;
 }
 .sobre-right p,
 .sobre-right h2,
 .sobre-right hr,
 .sobre-right.btn-red {
     z-index: 3;
+}
+.areas-atuacao {
+    width: 100%;
+    padding-top: 40px;
+}
+.areas-atuacao h2 {
+    margin: 0;
+}
+.atuacao-area {
+    width: 100%;
+    height: 200px;
+    border-top: 1px solid #FFF;
+}
+.atuacao {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.atuacao h2 {
+    color: #000;
+    font-family: 'Merriweather', sans-serif;
+    font-size: 32px;
+    margin-bottom: 15px;
+}
+.atuacao p {
+    margin: 0;
+    color: #000;
+    font-size: 18px;
+    font-family: 'Montserrat', sans-serif;
+}
+.lista-atuacao {
+    margin-top: 40px;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    gap: 15px;
+}
+.atuacao-item {
+    width: 100%;
+    max-width: 340px;
+    height: 200px;
+    padding: 12px;
+    /* border: 2px solid #505050; */
+    box-shadow: 1px 1px 5px 5px #00000005;
+    border-radius: 6px;
+    background-color: #FFF;
 }
 
 @media (max-width: 1180px) {
