--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,6 +11,10 @@ body {
     margin: 0;
     background-color: #f1f1f1;
 }
+section {
+    overflow: hidden;
+    background-color: #f1f1f1;
+}
 .center {
     width: 100%;
     max-width: 1180px;
@@ -73,7 +77,7 @@ header {
 .social-header a {
     width: 40px;
     height: 40px;
-    background-color: #e2e2e2;
+    background-color: var(--vermelho-p);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -85,17 +89,46 @@ header {
     display: none;
     justify-content: center;
     align-items: center;
-    background-color: #e2e2e2;
+    background-color: var(--vermelho-p);
+    border-radius: 4px;
+    cursor: pointer;
 }
 .menu-mobile {
     position: absolute;
     height: 100vh;
-    background-color: #e2e2e2;
-    right: -700px;
+    background-color: var(--verde-p);
+    right: 0px;
     top: 100%;
+    z-index: 5;
     display: flex;
-    width: 320px;
+    flex-direction: column;
+    width: 0px;
+    overflow: hidden;
     transition: 0.4s;
+    border-radius: 12px 0 0 0;
+}
+.menu-mobile nav {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    padding: 24px 12px;
+}
+.menu-mobile-ul {
+    padding: 0;
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+}
+.menu-mobile-ul li {
+    width: 100%;
+    height: 40px;
+    border-radius: 6px;
+    color: #FFF;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #0f2c0e;
 }
 .start-home {
     margin-top: 30px;
@@ -129,6 +162,7 @@ header {
     color: var(--vermelho-p);
     margin: 0;
     font-family: 'Merriweather', serif;
+    font-weight: 600;
 }
 .text-home h4 {
     font-size: 20px;
@@ -163,7 +197,8 @@ header {
     width: 95%;
 }
 .sobre-mim {
-    margin-top: 40px;
+    z-index: 5;
+    margin-top: 80px;
     position: relative;
     background-color: var(--verde-p);
     padding: 60px 0;
@@ -214,6 +249,7 @@ header {
     color: var(--vermelho-p);
     margin: 10px 0;
     font-family: 'Merriweather', sans-serif;
+    font-weight: 600;
 }
 .sobre-right p {
     margin-top: 25px;
@@ -232,7 +268,7 @@ header {
 }
 .areas-atuacao {
     width: 100%;
-    padding-top: 40px;
+    padding-top: 80px;
 }
 .areas-atuacao h2 {
     margin: 0;
@@ -243,6 +279,7 @@ header {
     border-top: 1px solid #FFF;
 }
 .atuacao {
+    padding: 0 12px;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -253,6 +290,7 @@ header {
     font-family: 'Merriweather', sans-serif;
     font-size: 32px;
     margin-bottom: 15px;
+    font-weight: 600;
 }
 .atuacao p {
     margin: 0;
@@ -266,11 +304,11 @@ header {
     display: flex;
     justify-content: space-between;
     gap: 15px;
-    padding: 0 48px;
+    padding: 0 12px;
 }
 .atuacao-item {
     width: 100%;
-    max-width: 340px;
+    max-width: 360px;
     padding: 12px;
     /* border: 2px solid var(--vermelho-p); */
     box-shadow: 1px 1px 5px 5px #00000005;
@@ -286,23 +324,72 @@ header {
 .atuacao-item p {
     font-size: 16px;
     line-height: 23px;
+    margin-top: 20px;
     font-family: 'Montserrat', sans-serif;
 }
 .link-transtornos {
+    padding: 12px;
+    border: 1px solid var(--verde-p);
     width: 100%;
+    border-radius: 6px;
     display: flex;
     justify-content: center;
+    transition: 0.3s;
 }
 .link-transtornos a {
     transition: 0.3s;
     font-weight: 600;
-    color: #404040;
+    color: var(--verde-p);
+    font-weight: 600;
     font-family: 'Montserrat', sans-serif;
 }
-.link-transtornos a:hover {
-    color: var(--vermelho-p);
+.link-transtornos:hover {
+    background-color: var(--verde-p);
 }
-
+.link-transtornos:hover a {
+    color: #FFF !important;
+    text-decoration: none;
+}
+.faq {
+    margin-top: 80px;
+    width: 100%;
+    background-color: var(--vermelho-p);
+    padding: 40px 0 60px 0;
+}
+.area-faq {
+    padding: 0 12px;
+}
+.area-faq-topo {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+.area-faq-topo h2 {
+    font-weight: 600;
+    color: #FFF;
+    font-family: 'Merriweather', sans-serif;
+    margin: 0;
+}
+.area-faq-topo hr {
+    border: 1px solid #FFF;
+    width: 30%;
+    margin-left: 0;
+    margin-bottom: 20px;
+}
+.card {
+    border: 0 !important;
+    margin-bottom: 10px !important;
+}
+.card-header {
+    background-color: #8d3127 !important;
+    border: #8d3127 !important;
+    outline: 0 !important;
+}
+.btn-link {
+    color: #FFF !important;
+    font-weight: 600 !important;
+}
 footer {
     margin-top: 40px;
     width: 100%;
@@ -310,12 +397,12 @@ footer {
     height: 300px;
 }
 .footer-content {
-    padding: 24px;
+    padding: 36px 12px;
     width: 100%;
     display: flex;
     justify-content: space-between;
 }
-.footer-right h3 {
+.footer-right h4 {
     color: #FFF;
     font-family: 'Merriweather', sans-serif;
     margin-top: 0;
@@ -334,6 +421,23 @@ footer {
     align-items: center;
     border-radius: 4px;
 }
+
+.wpp-flutuante {
+    position: fixed;
+    bottom: 100px;
+    right: 120px;
+    opacity: 0;
+    z-index: 10;
+    transition: .5s;
+}
+.wpp-flutuante:hover {
+    transform: scale(1.1);
+}
+@media (max-width: 1400px) {
+    .wpp-flutuante {
+        right: 20px;
+    }
+}
 @media (max-width: 1180px) {
     .btn-menu-mobile {
         display: flex;
@@ -343,15 +447,66 @@ footer {
         display: none;
     }
 }
-
-.wpp-flutuante {
-    position: fixed;
-    bottom: 100px;
-    right: 150px;
-    opacity: 0;
-    z-index: 10;
-    transition: .5s;
+@media (max-width: 1020px) {
+    .home-flex {
+        flex-direction: column;
+    }
+    .home-left{
+        width: 100%;
+        z-index: 2;
+        justify-content: space-around;
+        height: 500px;
+        padding: 50px 12px;
+    }
+    .home-right {
+        position: absolute;
+        opacity: 0.2;
+        width: 100%;
+        z-index: 1;
+    }
+    .home-left .btn-red {
+        width: 100%;
+    }
+    .sobre-mim {
+        margin-top: 0;
+    }
 }
-.wpp-flutuante:hover {
-    transform: scale(1.1);
+@media (max-width: 940px) {
+    .area-bg-sobre-mim,
+    .sobre-left {
+        display: none;
+    }
+    .area-img-sobre-mim {
+        width: 100%;
+        opacity: 0.25;
+    }
+    .sobre-right {
+        width: 100%;
+        padding: 0 24px;
+    }
+    .btn-red {
+        width: 100%;
+    }
+    .sobre-right p {
+        font-weight: 600;
+    }
+}
+@media (max-width: 820px) {
+    .text-home {
+        width: 100%;
+    }
+    .lista-atuacao {
+        flex-wrap: wrap;
+        margin-top: 15px;
+    }
+    .atuacao-item {
+        max-width: 100%;
+    }
+    .btn-link {
+        white-space: normal !important;
+    }
+    .footer-content {
+        flex-direction: column;
+        gap: 50px;
+    }
 }
