--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,6 +28,7 @@ header {
     top: 0;
     width: 100%;
     z-index: 10;
+    border-bottom: 3px solid var(--vermelho-p);
 }
 .hr-low-red {
     width: 80px;
@@ -55,14 +56,14 @@ header {
     padding: 0;
     display: flex;
     list-style: none;
-    gap: 15px;
+    gap: 5px;
     margin: 0;
 }
 .menu-header a:hover {
     text-decoration: none;
 }
 .menu-header li {
-    width: 120px;
+    width: 100px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -219,6 +220,10 @@ header {
     cursor: pointer;
     font-family: 'Montserrat', sans-serif;
     font-weight: 500;
+    text-decoration: none;
+}
+.btn-red:hover {
+    color: #FFF;
 }
 .img-home {
     width: 90%;
@@ -229,7 +234,7 @@ header {
 }
 .sobre-mim {
     z-index: 5;
-    margin-top: 80px;
+    margin-top: 60px;
     position: relative;
     background-color: var(--verde-p);
     padding: 60px 0;
@@ -427,11 +432,13 @@ header {
 .contato-topo {
     width: 100%;
 }
-.contato-topo h2 {
+.contato-topo h2,
+.avaliacoes-topo h2 {
     font-weight: 600;
     font-family: 'Merriweather', sans-serif;
 }
-.contato-topo p {
+.contato-topo p,
+.avaliacoes-topo p {
     margin-top: 25px;
     font-size: 18px;
     font-family: 'Montserrat', sans-serif;
@@ -609,6 +616,64 @@ textarea {
     margin-left: auto;
     margin-right: auto;
 }
+.avaliacoes-topo {
+    width: 100%;
+    padding: 0 12px;
+}
+.avalicoes-google {
+    width: 100%;
+    padding: 0 12px;
+    gap: 12px;
+    justify-content: space-between;
+    display: flex;
+    flex-wrap: wrap;
+}
+.avaliacao-item {
+    width: 100%;
+    max-width: 375px;
+    background-color: #FFF;
+    border-radius: 4px;
+    border: 1px solid #e5e5e5;
+    padding: 12px;
+}
+.avaliacao-topo {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 12px;
+    margin-bottom: 10px;
+}
+.avaliacao-topo-img-nome {
+    display: flex;
+    align-items: center;
+    gap: 12px;
+}
+.avaliacoes-topo-nome {
+    font-weight: 600;
+    font-family: 'Montserrat', sans-serif;
+}
+.avaliacao-texto {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    font-size: 14px;
+    font-family: 'Montserrat', sans-serif;
+}
+.link-google-avaliacoes {
+    display: block;
+    width: 100%;
+    padding: 12px;
+    text-align: center;
+    margin-bottom: 40px;
+}
+.link-google-avaliacoes a {
+    color: var(--verde-p);
+    font-weight: 600;
+}
+.link-google-avaliacoes a:hover {
+    color: var(--vermelho-p);
+}
 footer {
     width: 100%;
     background-color: #0E280D;
@@ -679,6 +744,12 @@ footer {
     .menu-header,
     .social-header {
         display: none;
+    }
+    .avalicoes-google {
+        justify-content: center;
+    }
+    .avaliacao-item {
+        max-width: 475px;
     }
 }
 @media (max-width: 1020px) {
